fixing header margin spacing issue

--- a/app/javascript/assets/stylesheets/3_elements/_header.scss
+++ b/app/javascript/assets/stylesheets/3_elements/_header.scss
@@ -3,3 +3,7 @@ header {
 
   margin-bottom: 50px;
 }
+
+.Routes {
+  margin-top: -50px;
+}
